<resources>
    <string name="app_name">Make \'Em Equal</string>

    <string name="space">_</string>
    <string name="divide">÷</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="plus">+</string>
    <string name="reset">Reset</string>

    <string name="make_equal">Make Them Equal</string>
    <string name="great_job">GREAT JOB!</string>

    <string name="action_settings">Settings</string>
    <string name="start_new_game">Start new game</string>
    <string name="about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Preference Titles -->
    <string name="display_header">Display</string>

    <!-- Preferences -->
    <string name="night_mode_key">Night Mode</string>
    <string name="night_mode_title">Dark/Night Mode</string>
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Night/Dark Mode (unless disabled in OS Settings)</string>
</resources>